--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,15 @@ name = "client"
 path = "src/client.rs"
 
 [dependencies]
-tokio = { version = "0.2", features = ["macros", "stream", "sync", "time"] }
-tonic = { version = "0.2", features = ["transport", "tls"] }
-async-stream = "0.2"
-futures = "0.3.5"
-prost = "0.6"
+tracing-subscriber = "0.3.9"
+tokio = { version = "1.17.0", features = ["full"] }
+tonic = { version = "0.6.2", features = ["transport", "tls"] }
+async-stream = "0.3.3"
+futures = "0.3.21"
+prost = "0.9"
 chrono = "0.4"
 anyhow = "1.0"
-tracing-subscriber = "0.2.7"
+structopt = "0.3"
 
 [build-dependencies]
-grpc-build = "0.0.5"
+grpc-build = "0.4.0"
